--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
     <div class="wrapper">
       <header>
         <h1>Semantic Web based Machine Translation</h1>
-        <p></p>
+        <p>An experimental combination of traditional NLP technology with the W3C Semantic Web building stack.</p>
         <p class="view"><a href="https://github.com/heussd/swmt">View the Project on GitHub <small>heussd/swmt</small></a></p>
         <ul>
-          <li><a href="https://github.com/heussd/swmt/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/heussd/swmt/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="swmt-esirmt-hytra.pdf">Download <strong>Slides</strong></a></li>
+          <li><a href="https://github.com/heussd/swmt/zipball/master">Download <strong>Prototype</strong></a></li>
           <li><a href="https://github.com/heussd/swmt">Fork On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
+      	<h3>Contact the author</h3>
+      	<p>Feel free to contact me. <a href="mailto:Timm.Heuss@web.de">Timm.Heuss@web.de</a>. I am excited to hear from you!
+      	</p>
         <h3>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
