--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>An experimental combination of traditional NLP technology with the W3C Semantic Web building stack.</p>
         <p class="view"><a href="https://github.com/heussd/swmt">View the Project on GitHub <small>heussd/swmt</small></a></p>
         <ul>
-          <li><a href="swmt-esirmt-hytra.pdf">Download <strong>Slides</strong></a></li>
+          <li><a href="swmt-esirmt-hytra-2012.pdf">Download <strong>Slides</strong></a></li>
           <li><a href="https://github.com/heussd/swmt/zipball/master">Download <strong>Prototype</strong></a></li>
           <li><a href="https://github.com/heussd/swmt">Fork On <strong>GitHub</strong></a></li>
         </ul>
@@ -28,32 +28,13 @@
       	<h3>Contact the author</h3>
       	<p>Feel free to contact me. <a href="mailto:Timm.Heuss@web.de">Timm.Heuss@web.de</a>. I am excited to hear from you!
       	</p>
-        <h3>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        <h3>EACL Workshop ESIRMT-HyTra 2012</h3>
+        <p>
+        <video src="swmt-esirmt-hytra-2012.m4v"></video>
+        <a href="swmt-esirmt-hytra-2012.m4v">Download the video</a><br/>
+        <a href="swmt-esirmt-hytra-2012.pdf">Download the slides</a>
+        </p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/heussd">heussd</a></p>
